snapshots/truth__resolve__tests__func_scoped_using_outer_shadowed_const.snap
---
source: src/resolve/tests.rs
expression: "resolve_expect_err::<ast::Block>(r#\"{\n    const int x = 2;\n    if (true) {\n        int x = 2;\n        int foo() {\n            return x;  // should fail at 'x'\n        }\n    }\n}\"#,\n                                 \"nested function\").trim()"
---
error: cannot use local from outside function
  ┌─ <input>:6:20
  │
4 │         int x = 2;
  │             - defined here
5 │         int foo() {
6 │             return x;  // should fail at 'x'
  │                    ^ used in a nested function
